<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/btn_load_ad_interstitial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_ad_interstitial"
            android:enabled="false"
            >
        </Button>

        <Button
            android:id="@+id/btn_load_ad_rewarded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_ad_rewarded"
            android:enabled="false"
            >
        </Button>

        <Button
            android:id="@+id/btn_load_ad_interstitial_ad_colony"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_ad_interstitial_ad_colony"
            android:enabled="false"
            >
        </Button>

        <Button
            android:id="@+id/btn_load_ad_rewarded_ad_colony"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_ad_rewarded_ad_colony"
            android:enabled="false"
            >
        </Button>

    </LinearLayout>

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/loading_text"
        android:layout_marginBottom="10dp"
        >
    </TextView>

</RelativeLayout>